Segundo commit, se agrego una update

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
         <li>Pollo</li>
     </ol>
     <br>
+    
 
     <input type="number" id="valorA">
     <input type="number" id="valorB">
     <button id="boton" onclick="saludar()">Oprimir</button>
+
+    <hr>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Kanye_West_at_the_2009_Tribeca_Film_Festival_%28crop_2%29.jpg">
 
     <script src="js/index.js"></script>
 </body>
